hphp/hack/test/typecheck/modules/internal_trait_leak_typeconstant_bad.php.exp
File "internal_trait_leak_typeconstant_bad.php--B.php", line 6, characters 10-10:
Invalid argument (Typing[4110])
  File "internal_trait_leak_typeconstant_bad.php--A.php", line 5, characters 16-16:
  Expected `T::TC` because this is an internal symbol from module A, which is opaque outside of the module.
  File "internal_trait_leak_typeconstant_bad.php--A.php", line 12, characters 30-37:
  The type originated from here
  File "internal_trait_leak_typeconstant_bad.php--A.php", line 12, characters 30-37:
    resulting from expanding the type constant `T::TC`
  File "internal_trait_leak_typeconstant_bad.php--B.php", line 6, characters 10-10:
  But got `int`
